updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm currently a high school teacher learning to code! </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Dayton, OH</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Climbing, camping, live music, watching sports</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Environmental Engineer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Brooklyn, NY</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I get to solve unique problems and create technology that can help people in their everyday lives.</p>
     </section>
 
     <footer id="footer">
